# FEgrow

./: .gitignore  5NEV.pdb1  CHANGELOG  CITATION.cff  LICENSE-3RD-PARTY.txt  LICENSE.txt  MANIFEST.in  README.md  env.yml  environment.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  rgroups.ipynb  rgroups_old.ipynb  setup.cfg  setup.py  versions.json
.github/: env.yml
automated-fegrow/: auto-fegrow.py  coreh.sdf  smiles-test-MERS.txt
chimera-protonation/: protonate-all.py
docs/: .buildinfo  acknowledgments.html  acknowledgments.md  api.html  environment.yml  genindex.html  index.html  installation.html  installation.md  license.html  license.md  main.html  objects.inv  search.html  searchindex.js  tutorial.html
fegrow/: __init__.py  al.py  builder.py  chemspace.py  conformers.py  dataframes.py  mlp.py  package.py  receptor.py  rmol.py  sascorer.py  toxicity.py  utils.py  version.py  version.txt
latest/: 404.html  index.html  objects.inv  sitemap.xml
notebooks/: .tutorial.py  10_chemspace_dask.ipynb  1_basic_tutorial_full.ipynb  1_basic_tutorial_grow_rgroup.ipynb  1_mini_tutorial_attach_rgroup_smiles.ipynb  1_mini_tutorial_grow_rgroup.ipynb  1_tutorial_single_mol.ipynb  2_mini_tutorial_grow_linker_rgroup.ipynb  2_tutorial_single_mol.ipynb  3_mini_tutorial_replace_substructure.ipynb  4_tutorial_introduce_chemical_space.ipynb  4_tutorial_introduce_chemspace.ipynb  5_tutorial_chemspace_streamlined.ipynb  6_chemspace_smiles.ipynb  6_chemspace_smiles_intro_active_learning.ipynb  6_tutorial_chemspace_from_smiles_active_learning.ipynb  7_active_learning.ipynb  7_active_learning_enamine.ipynb  8_active_learning_details.ipynb  9_cs50k_study.ipynb  fegrow.ipynb  fegrow_minimum.ipynb  google-colab-tutorial.ipynb  rgroups.ipynb  tutorial-linker.ipynb  tutorial.ipynb  tutorial.py  tutorial_cs.ipynb
rgroup/: __init__.py  conformers.py  package.py  receptor.py  toxicity.py  version.py
sarscov2/: coreh.sdf  sarscov2.pse
testing/: test.py
tests/: conftest.py  library_gen.py  test_chemspace.py
tutorials/: 0_basic_tutorial_full.ipynb  README.md  (+5 more)
(+210 files in other folders)
