[metadata]
name = fegrow
version = file: fegrow/version.txt
author = Mateusz K. Bieniek, Ben Cree, Rachael Pirie, Josh Horton, Daniel Cole
author_email = bieniekmat@gmail.com
description = FEgrow: generate congeneric ligands for FEP by growing a template molecule.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://cole-group.github.io/FEgrow/
project_urls =
    Bug Tracker = https://github.com/cole-group/FEgrow/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
packages = find:
python_requires = >=3.7
install_requires =
[options.packages.find]
where =
[options.entry_points]
console_scripts =
    fegrow = fegrow.cli.cli:cli
